# test-cicd

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: docker-publish.yml
src/sample_project/: app.py
