[tool.poetry]
name = "sample-project"
version = "0.1.0"
description = ""
authors = ["Vijeta <vijeta19mcmt08@gmail.com>"]
readme = "README.md"
packages = [{include = "sample_project", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.2.0"
pandas = "^2.2.3"
streamlit = "^1.41.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
